index.css
body {
    background-color: #000000;
    color: #00FF00;
    border: 1px solid rgb(0, 240, 0);
    text-align: center;
    text-shadow: 2px 2px 5px #ffffff;
  }

h1 {
   font-size: 35px;
   font-family: 'Times New Roman', Times, serif;
   font-style: italic;
   padding-top: 30px;
   color: #000000;
   text-shadow: 2px 2px 5px #00FF00;
}

h2 {
   font-size: 35px;
   font-family: 'Times New Roman', Times, serif;
   font-style: italic;
   padding-bottom: 30px;
   color: #000000;
}

#imgHead {
  background-image: url(https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160505_151327.jpg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 340px;
  height: 330px;
  display: block;
}

#logo {
  width: 23px;
  height: 20px;
}

#about-me, #mission {
  font-size: 23px;
  font-style: italic;
  text-shadow: 2px 2px 5px #ffffff;
  padding-top: 10px;
}

#missionTitle {
  font-size: 50px;
  border-bottom:  2px solid #00FF00;
}

#serviceArea {
  font-size: 40px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-style: italic;
  text-shadow: 2px 2px 5px #ffffff;
}

#citrus-co {
  height:auto;
  width:200px;
}

.navbar {
  width: 100%;
  background-color:#000000;
  position: fixed;
  top: 0;
  font-size: 20px;
}

.nav-link {
  color:#00FF00;
  padding-right:10px;
}

#contacts {
    color: #00FF00;
    font-size: 27px;
    padding-bottom: 50px;
    text-shadow: 2px 2px 5px #ffffff;
    padding-top: 30px;
  }

#motto {
    color: #000000;
    text-shadow: 2px 2px 5px #00FF00;
  }

#services {
  font-size: 50px;
  border-bottom:  2px solid #00FF00;
  text-shadow: 2px 2px 5px #ffffff;
}

#ServiceList {
  font-size: 30px;
  padding-bottom: 20px;
  text-shadow: 2px 2px 5px #ffffff;
  padding-top: 20px;
}

a:hover {
  color: #FFFFFF;
}

#serviceCitys {
  color:blue;
}

/*Fade In and Out keyframes*/

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes fadeOut {
  from { opacity: 1; }
  to { opacity: 0; }
}

/*Blink animation keyframe*/

@keyframes blink-animation {
  to {
      visibility: hidden;
  }
}

/*Color change animaton keyframe*/

@keyframes colorChange {
  0% { color: #FF0000; }
  25% { color: #00FF00; }
  50% { color: #0000FF; }
  75% { color: #00FFBB; }
  100% { color: #FF0000; }
}

.fade-in-out {
  animation: fadeOut 4s ease-out 4s, fadeIn 4s ease-in,  fadeOut 4s ease-out 4s,  fadeIn 4s ease-in 4s;
  animation-fill-mode: forwards;
  animation: colorChange 5s infinite;
}

/*color for clickable links*/

.tele, .fb, .email {
  color:#00FFBB
}

.imgContainer {
  background-color: #000000;
  display: block;
  padding: 20px;
  padding-top:50px;
}

#img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10, #img11, #img12 {
  width: 200px;
  height: 200px;
  padding: 30px;
}

#photo-text, #about-me-text, #ContactUs-FormTitle, #contact-section {
  border-bottom: 2px solid #00FF00;
  padding-top: 50px;
  font-size: 50px;
}

.zoom:hover {
  transform: scale(2);
}

#photo-disclaimer {
  font-size:10px;
}

/* */
#form {
  padding-top: 20px;
  font-size: 20px;
}

.form-input {
  background-color: #91ffa7;
  height: 24px;
  width: 300px;
  border-radius: 10px;
}

#form-input-area {
  background-color: #91ffa7;
  width: 300px;
  border-radius: 10px;
}

#submitButton {
  font-size: 20px;
  color:#00FF00;
  border-color:#FF0000;
  background-color: #000000;
  border-radius: 10px;
  height: 30px;
  width: 100px;
}

#message-error {
  color: #FF0000;
  font-size: 30px;
}

#welcomeMsg {
  font-size:30px;
}

#bookNow {
  font-size: 50px;
  font-weight: bold;
  animation: colorChange 3s infinite;
}

